plugins {
    id 'java'
    id 'io.spring.dependency-management' version '1.1.4'
}

allprojects {
    group = 'net.causw'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
        maven { url 'https://jitpack.io' }
    }
}

// 공통 의존성 버전 관리
subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'

    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17

    dependencies {
        // Lombok
        compileOnly 'org.projectlombok:lombok:1.18.30'
        annotationProcessor 'org.projectlombok:lombok:1.18.30'
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }
}